[gd_scene load_steps=2 format=3 uid="uid://7b8nohlimgwl"]

[ext_resource type="Script" path="res://scenes/ui/travel_info_panel.gd" id="1_d8pkd"]

[node name="TravelInfoPanel" type="HBoxContainer"]
offset_right = 1280.0
script = ExtResource("1_d8pkd")

[node name="DestinationButtons" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PathInfoContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="DistanceLabel" type="Label" parent="PathInfoContainer"]
layout_mode = 2
text = "Distance:"

[node name="DistanceValue" type="Label" parent="PathInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "? km"

[node name="TravelTimeLabel" type="Label" parent="PathInfoContainer"]
layout_mode = 2
text = "Travel Time:"

[node name="TravelTimeValue" type="Label" parent="PathInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "? seconds"
